--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,10 @@ Variavel de formatação
 }
 
 body {
-    background: linear-gradient(to bottom, var(--cor1), var(--cor3));
     height: 1vh;
     font-family: var(--fonte-tema);
     font-size: 1em;
+    background-color: var(--cor1);
 }
 
 
@@ -44,6 +44,15 @@ main h1 {
     color: var(--cor5);
     margin: -10px auto 20px auto;
     text-shadow: 2px 3px 3px rgba(0, 0, 0, 0.158);
+}
+
+main a {
+    color: #99034E;
+    text-decoration: none;
+}
+
+main a:hover {
+    text-decoration: underline;
 }
 
 main > div#load_jogo {
@@ -105,6 +114,25 @@ div#game > div#card_list div.card:hover {
     background-color: #cecece;
     cursor: pointer;
 }
+
+div#load_option {
+    display: none;
+    min-width: 200px;
+    margin-top: 20px;
+    /*background-color: #000;*/
+    text-align: center;
+    padding: 10px;
+    border: 1px dashed var(--cor3);
+    border-radius: 10px;
+    transition: all ease-in-out 1s;
+}
+
+div#load_option form input {
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid rgba(0,0,0,.5);
+}
+
 
 footer {
     padding: 10px;
