--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ main {
     border: 4px solid var(--cor2);
     padding: 25px;
     max-width: 900px;
+    min-height: 300px;
     margin: 10px auto auto auto;
     background-color: white;
     border-radius: 10px;
