--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ div#game > div#card_list div.card {
     background-position: center;
     background-size: 100px 100px;
     text-align: center;
+    overflow: hidden;
 }
 
 div#game > div#card_list div.card:hover {
