--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,13 @@ div#game {
 div#game > div#card_list div.card {
     display: inline-block;
     min-width: 100px;
+    max-width: 100px;
     min-height: 200px;
     border: 2px solid rgba(0, 0, 0, 0.158);
     margin: 4px;
     padding: 10px;
-    background: url('../imagens/lampada.png') no-repeat;
-    background-position: center;
+    background: url('../imagens/lampada-apagada.png') no-repeat;
+    background-position: bottom;
     background-size: 100px 100px;
     text-align: center;
     overflow: hidden;
