Adicionamento da tela de login

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ Variavel de formatação
     --cor3: #32E632;
     --cor4: #99034E;
     --cor5: #E6328C;
+    --cor6: #3a001d;;
 
     --fonte-destaque: 'Press Start 2P', cursive;
     --fonte-tema: 'Titillium Web', sans-serif;
