--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ div#game {
 }
 
 div#game > div#card_list div.card {
+    position: relative;
     display: inline-block;
     min-width: 100px;
     max-width: 100px;
@@ -133,6 +134,23 @@ div#game > div#card_list div.card {
 div#game > div#card_list div.card:hover {
     background-color: #cecece;
     cursor: pointer;
+}
+
+div#game .btn_responder {
+    display: block;
+    position: absolute;
+    background-color: var(--cor4);
+    padding: 10px;
+    color: white;
+    bottom: 10px;
+    margin: auto;
+    text-decoration: none;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+}
+
+div#game .btn_responder:hover {
+    background-color: var(--cor6);
 }
 
 div#load_option {
@@ -158,4 +176,18 @@ footer {
     padding: 10px;
     text-align: center;
     color: white;
+}
+
+/*Pagina responder.php*/
+main div#game form {
+    padding: 20px;
+}
+
+main div#game form p {
+    padding: 5px;
+}
+
+main div#game form input {
+    padding: 10px;
+    margin: 5px auto;
 }
