--- a/css/style.css
+++ b/css/style.css
@@ -191,3 +191,31 @@ main div#game form input {
     padding: 10px;
     margin: 5px auto;
 }
+
+.error {
+    color: red;
+    text-align: center;
+}
+
+.sucess {
+    color: var(--cor3);
+    text-align: center;
+}
+
+div#msg_resposta_ajax {
+    display: block;
+    height: 60px;
+}
+
+div#game div#load {
+    display: none;
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    background-color: rgba(0,0,0,.5);
+    background-image: url('../imagens/load.gif');
+    background-repeat: no-repeat;
+    background-position: 50%;
+}
