--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,11 @@ div#game {
     padding: 10px;
 }
 
-div#game > div#card_list div.card {
+div#game > div#card_list div.card_main {
     position: relative;
     display: inline-block;
-    min-width: 100px;
-    max-width: 100px;
-    min-height: 200px;
+    width: 100px;
+    height: 200px;
     border: 2px solid rgba(0, 0, 0, 0.158);
     margin: 4px;
     padding: 10px;
@@ -128,12 +127,27 @@ div#game > div#card_list div.card {
     background-position: bottom;
     background-size: 100px 100px;
     text-align: center;
-    overflow: hidden;
 }
 
-div#game > div#card_list div.card:hover {
+
+div#game > div#card_list div.card_main div.card{
+    display: block;
+    white-space: normal;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100px;
+    height: 120px;
+    padding: 5px;
+    text-overflow: ellipsis;
+}
+
+div#game > div#card_list div.card_main:hover {
     background-color: #cecece;
     cursor: pointer;
+}
+
+.lock {
+    background-color: #cecece;
 }
 
 div#game .btn_responder {
